Bug 503154 - Big gap above the search input field
Summary: Big gap above the search input field
Status: RESOLVED FIXED
Alias: None
Product: kasts
Classification: Applications
Component: general (other bugs)
Version First Reported In: 25.04.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: bart
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-04-22 07:38 UTC by Lluc Pallejà
Modified: 2025-04-23 08:12 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Kasts screenshot (47.90 KB, image/png)
2025-04-22 07:38 UTC, Lluc Pallejà
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Lluc Pallejà 2025-04-22 07:38:29 UTC
Created attachment 180514 [details]
Kasts screenshot

STEPS TO REPRODUCE
1. Open Kasts application 
2. Select Appareance - Either Desktop or Auto

OBSERVED RESULT
There is a huge empty gap above the search field



EXPECTED RESULT
The header should take all the with space and remove that empty space

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Debian Bookworm, KDE 5
KDE Plasma Version:  5.27.5
KDE Frameworks Version: 5.103.0
Qt Version: 5.15.8
X11
Comment 1 bart 2025-04-22 19:25:04 UTC
Is it the flatpak version that you are using?
Comment 2 Lluc Pallejà 2025-04-22 19:51:08 UTC
(In reply to bart from comment #1)
> Is it the flatpak version that you are using?

Yes.
Comment 3 Bug Janitor Service 2025-04-22 20:27:25 UTC
A possibly relevant merge request was started @ https://invent.kde.org/multimedia/kasts/-/merge_requests/276
Comment 4 bart 2025-04-22 20:28:30 UTC
Git commit 3cba5687d7773ce2162630ee6a14871ac5b0c0d9 by Bart De Vries.
Committed on 22/04/2025 at 20:28.
Pushed by bdevries into branch 'master'.

Anchor header depending on qt version

M  +7    -0    src/main.cpp
M  +2    -2    src/qml/Main.qml

https://invent.kde.org/multimedia/kasts/-/commit/3cba5687d7773ce2162630ee6a14871ac5b0c0d9
Comment 5 bart 2025-04-22 20:29:56 UTC
Git commit 8a14a01f49c973a4ee119028ff1090cbd8e2eea1 by Bart De Vries.
Committed on 22/04/2025 at 19:56.
Pushed by bdevries into branch 'release/25.04'.

Anchor header depending on qt version

M  +7    -0    src/main.cpp
M  +2    -2    src/qml/Main.qml

https://invent.kde.org/multimedia/kasts/-/commit/8a14a01f49c973a4ee119028ff1090cbd8e2eea1
Comment 6 bart 2025-04-22 20:44:55 UTC
Should be fixed within a few hours when the flatpak builder and publisher has finished.
Comment 7 Lluc Pallejà 2025-04-23 08:12:58 UTC
(In reply to bart from comment #6)
> Should be fixed within a few hours when the flatpak builder and publisher
> has finished.

Thank you!