Anchor header depending on qt version

BUG: 503154